--- a/exercicio 5 iframe/Aula 05 iframe.html
+++ b/exercicio 5 iframe/Aula 05 iframe.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<title>Aula 05 iframe</title>
+<title>Aula 06 link</title>
 <meta charset="utf8">
 </head>
 <body>
-	<h1>Aula 05 Trabalhando com iframe</h1>
-    <iframe width="500" height="500" src="https://www.uol.com.br/">
-    
-    </iframe>
-
-
-  
+	<h1>Aula 06 Trabalhando com link</h1>
+   <a href="https://smn.com.br/" target="_blank"><img src="../imagens/logoSmn.png" ></a><br>
+   <a href="../exercicio 3 Listas/Aula 03 listas.html" target="_blank">Link => Aula 03</a>
 </body>
 </html>
